\name{NEWS}
\title{News for Package \pkg{Gifi}}
\encoding{UTF-8}

\section{Version 0.1-0}{
 \itemize{
    \item \code{Princals wrapper incl. S3 print added}
    \item \code{Bug in makeNumeric fixed}
  }
}

\section{Version 0.1-1}{
 \itemize{
    \item \code{Allow for different object score and quantification normalizations}
    \item \code{Knot utility functions functions and makeNumeric exported}
    \item \code{Princals S3 summary added}
    \item \code{Allow for different ties and missing specifications}
    \item \code{knotsD as default in princals}
    \item \code{Knot functions now work for single variables as well}
  }
}