@@ -1,8 +1,8 @@
 Package: Gifi
 Type: Package
 Title: Multivariate Analysis with Optimal Scaling
-Version: 0.1-1
-Date: 2017-03-03
+Version: 0.1-2
+Date: 2017-03-04
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email = "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"), person("Patrick J. F.", "Groenen", role = "ctb"))
 Description: Implements categorical principal component analysis (PRINCALS), multiple correspondence analysis (HOMALS). It replaces the homals package. 
 URL: http://r-forge.r-project.org/projects/psychor/
